<resources>
    <string name="app_name">Furn-Land</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Blank for now</string>
    <string name="more">more</string>
    <string name="less">less</string>
    <string name="originalPriceEg"><strike>₹699</strike></string>
    <string name="no_ratings_available_yet">No ratings available yet.</string>
    <string name="all_details">All Details</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="show_more_less_icon_for_details">Show more/less icon for details</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="welcome_line_home">All your Furniture needs in one place.\nBrowse through our vast categories!</string>
    <string name="home">Home</string>
    <string name="browse">Browse</string>
    <string name="profile">Profile</string>
    <string name="product_name">Product Name</string>
    <string name="rs_symbol">₹</string>
    <string name="illustration_for_search">Illustration for Search</string>
    <string name="start_your_furniture_hunt_here">Start your furniture hunt here</string>
    <string name="no_products_found">No Products found</string>
    <string name="sort">SORT</string>
    <string name="price_high_to_low">Price - High to Low</string>
    <string name="price_low_to_high">Price - Low to High</string>
    <string name="rating_high_to_low">Rating - High to Low</string>
    <string name="rating_low_to_high">Rating - Low to High</string>
    <string name="no_results">No Products found : (\nTry using more relatable words!</string>
    <string name="name">Name</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="log_in">LOG IN</string>
    <string name="field_cant_be_empty">This field can\'t be empty</string>
    <string name="not_an_email">This is not a valid email address</string>
    <string name="not_a_mobile">This is not a valid mobile number</string>
    <string name="password_doesnt_match">Password doesn\'t match</string>
    <string name="password_min_character">Password must contain atleast 8 characters</string>
    <string name="user_details">USER_DETAILS</string>
    <string name="not_logged_in">You\'re not Logged In!</string>
    <string name="not_now">Not now</string>
    <string name="cart_fragment">Cart Fragment</string>
    <string name="favorite_fragment">Favorite Fragment</string>
    <string name="no_favorites">Looks like your favorite list is empty.\nGo ahead and mark some!</string>
    <string name="view_cart">View Cart</string>
    <string name="no_cart_item">Your cart is empty. Go and fill your cart with some Awesome products.</string>
    <string name="checkout">Checkout</string>
    <string name="total_price">Total Price :</string>
    <string name="rupee_symbol">₹</string>
    <string name="okay">Okay</string>
    <string name="view_order">View Order</string>
    <string name="no_orders">You didn\'t made any orders yet</string>
    <string name="order_date">Order Date :</string>
    <string name="order_time">Order Time :</string>
    <string name="no_of_products">"No. of Products : "</string>
    <string name="quantity">"Quantity : "</string>
    <string name="product_unavailable">Product Unavailable</string>
    <string name="logout">Logout</string>
    <string name="log_out">Log out</string>
    <string name="no">No</string>
    <string name="confirm_logout">Are you sure you want to Log out?</string>
    <string name="my_orders">My Orders</string>
    <string name="my_favorites">My Favorites</string>
    <string name="my_cart">My Cart</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_name">Change Name</string>
    <string name="change_mobile">Change Mobile</string>
    <string name="change_password">Change Password</string>
    <string name="myAddresses">My Address</string>
    <string name="address">Address</string>
    <string name="door_or_apartment">Door / Apartment No.</string>
    <string name="city_or_town">City / Town</string>
    <string name="new_address">New Address</string>
    <string name="done">Done</string>
    <string name="not_a_valid_pincode">This is not a valid Pincode</string>
    <string name="pincode">Pincode</string>
    <string name="landmark">LandMark</string>
    <string name="adrress_required">Address required for Checkout</string>
    <string name="add_address_and_checkout">Do you want add address and proceed to Checkout?</string>
    <string name="yes">Yes</string>
    <string name="change_address">Change Address</string>
    <string name="no_address_added">No Address added</string>
    <string name="add_address">Add Address</string>
    <string name="remove_from_history">Remove from search history?</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="remove_suggestion">Remove Suggestion</string>
    <string name="no_internet">No Internet connnection. Images may not me loaded properly.</string>
    <string name="remove_from_favorite">Remove from Favorites?</string>
</resources>